fix:
1. audio preview
2. in mobile, filelist header layer is too high

--- a/frontend/src/css/_share.css
+++ b/frontend/src/css/_share.css
@@ -19,7 +19,6 @@
   color: var(--textPrimary);
   border-radius: 0.2em;
   margin: 5px;
-  overflow: hidden;
 }
 
 .share__box__header {
